# pandascore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  commitlint.config.mjs  deny.toml  renovate.json  test.dot
.github/: renovate.js
.github/workflows/: commitlint.yaml  renovate.yaml  rust.yaml
examples/: get_league.rs  get_league_matches.rs  get_league_series.rs  get_player.rs  get_tournament_bracket.rs  list_leagues.rs
src/: client.rs  lib.rs
src/endpoint/: mod.rs  rl.rs
src/endpoint/all/: leagues.rs  match.rs  matches.rs  mod.rs  players.rs  series.rs  teams.rs  tournament.rs
src/endpoint/lol/: champions.rs  items.rs  leagues.rs  matches.rs  mod.rs  players.rs  series.rs  spells.rs  tournaments.rs
src/model/: game.rs  league.rs  matches.rs  mod.rs  player.rs  series.rs  team.rs  tournament.rs  winner.rs
src/model/bracket/: matches.rs  mod.rs
src/model/lol/: champion.rs  item.rs  mod.rs  spell.rs
tests/: common.rs  leagues.rs  matches.rs  players.rs  series.rs  teams.rs  tests.rs  tournaments.rs
tests/fixtures/: get_league.json  get_league_matches.json  get_player.json  get_team.json  list_league_series.json  list_leagues.json  list_players.json  list_teams.json  match_de.json  series_get.json  series_list.json  tournaments_rosters_get.json  tournaments_standings_bracket_get.json  tournaments_standings_group_get.json
tests/fixtures/lol/: items_get.json  items_list.json  leagues_list.json  matches_list.json  players_list.json  series_list.json  spells_get.json  spells_list.json  teams_list.json  tournaments_list.json
tests/fixtures/rl/: leagues_list.json  matches_list.json  players_list.json  series_list.json  teams_list.json  tournaments_list.json
tests/lol/: items.rs  leagues.rs  matches.rs  players.rs  series.rs  spells.rs  teams.rs  tournaments.rs
tests/rl/: leagues.rs  matches.rs  players.rs  series.rs  teams.rs  tournaments.rs
